--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,7 @@
 
 <body>
     <div class="pole">
-        <div class="cell">
-            <img src="https://raw.githubusercontent.com/netology-code/ahj-homeworks/simplification/dom/pic/goblin.png" alt="картинка" />
-        </div>
+        <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
